--- a/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
+++ b/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
@@ -50,7 +50,7 @@
         <a class="dropdown-item" style="cursor: pointer;"
           (click)="changeSort('createdDateDesc');$event.stopPropagation();">
           <i class="ai-time me-2"></i>
-          De la récente à la plus ancienne
+          De la plus récente à la plus ancienne
           <i class="ai-check me-2" *ngIf="currentSort=='createdDateDesc'"></i>
         </a>
         <a class="dropdown-item" style="cursor: pointer;"
