--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -97,10 +97,21 @@
               </a>
             </li>
 
+            <!-- Kiosk -->
+            <li class="nav-item border-left">
+              <a class="nav-link"
+                [ngClass]="{'active': getCurrentRoute().includes('/kiosk') && getCurrentRoute().includes('/kiosk')}"
+                routerLink="kiosk">
+                Kiosque
+              </a>
+            </li>
+
             <!-- Podcast -->
             <li class="nav-item nav-item-podcast">
               <span>
-                <a class="nav-link podcast-nav-link mt-auto py-0 ps-2" routerLink="podcasts">
+                <a class="nav-link podcast-nav-link mt-auto py-0 ps-2"
+                  [ngClass]="{'active': getCurrentRoute().includes('/podcasts') && getCurrentRoute().includes('/podcasts')}"
+                  routerLink="podcasts">
                   Podcast <span><i class="fas fa-bolt"></i></span>
                 </a>
               </span>
