--- a/client-jss/src/app/main/components/kiosk/kiosk.component.html
+++ b/client-jss/src/app/main/components/kiosk/kiosk.component.html
@@ -44,7 +44,8 @@
                 <h5>JSS N.{{newspaper.newspaperIssueNumber}}</h5>
               </div>
               <div class="col-auto">
-                <a class="col-auto btn-secondary rounded-circle btn-circle-md fs-4"><i class="bi-cart"></i></a>
+                <a class="col-auto btn-secondary rounded-circle btn-circle-md fs-4"
+                  (click)="buyNewspaper(newspaper.id)"><i class="bi-cart"></i></a>
               </div>
             </div>
           </div>
