save devs in progress for vouchers myjss and osiris

--- a/client/src/app/modules/crm/components/crm/crm.component.html
+++ b/client/src/app/modules/crm/components/crm/crm.component.html
@@ -14,4 +14,9 @@
       <candidacy></candidacy>
     </ng-template>
   </mat-tab>
+  <mat-tab label=" Gestion des coupons">
+    <ng-template matTabContent>
+      <voucher></voucher>
+    </ng-template>
+  </mat-tab>
 </mat-tab-group>
