--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -67,23 +67,22 @@
                 <h6><i class="ai-circle-info me-2"></i>Information</h6>
                 <div class="row form-switch justify-content-start p-0 pt-md-2 g-3">
                   <div class="col-md-5">
-                    <label class="col-form-label" for="announcementPublicationDate">Publication souhaitée</label>
+                    <label class="col-form-label" for="announcementPublicationDate">Publication souhaitée*</label>
                     <div class="col">
-                      <select-string [types]="selectionRedaction" label="Publier l'annonce au JSS ?"
-                        [isMandatory]="false" [form]="informationForm"
+                      <select-string [types]="selectionRedaction" [isMandatory]="false" [form]="informationForm"
                         [propertyName]="'selectionRedaction'+provision.order"
                         [(model)]="selectedRedaction[selectedServiceIndex][index]"
                         (selectionChange)="changeDoNotGenerateAnnouncement($event, provision)">
                       </select-string>
                     </div>
                   </div>
-                  <div class="col-md-3" *ngIf="isDoNotGenerateAnnouncement">
+                  <div class="col-md-5" *ngIf="isDoNotGenerateAnnouncement">
                     <label class="col col-form-label" for="announcementPublicationDate">Date de publication
                       souhaitée*</label>
                     <div class="col">
-                      <generic-date-picker [(model)]="provision.announcement.publicationDate" label="  "
-                        [form]="informationForm" [propertyName]="'publicationDate'+provision.order"
-                        [isMandatory]="false" [isDisabled]="false" [minDate]="minDatePublication"></generic-date-picker>
+                      <generic-date-picker [(model)]="provision.announcement.publicationDate" [form]="informationForm"
+                        [propertyName]="'publicationDate'+provision.order" [isMandatory]="false" [isDisabled]="false"
+                        [minDate]="minDatePublication"></generic-date-picker>
                     </div>
                   </div>
                 </div>
