--- a/client/src/app/modules/miscellaneous/components/forms/generic-datepicker/generic-datepicker.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/generic-datepicker/generic-datepicker.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="full-width" [formGroup]="form!">
-  <mat-label>{{label}}</mat-label>
+  <mat-label *ngIf="label">{{label}}</mat-label>
   <input matInput [matDatepicker]="datetimePicker" [min]="minDate" [max]="maxDate" [formControlName]="propertyName"
     autocomplete="do-not-autocomplete" (dateChange)="dateChange($event.value)">
   <mat-datepicker-toggle matSuffix [for]="datetimePicker"></mat-datepicker-toggle>
