--- a/client/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -149,9 +149,6 @@
                               {{asso.affaire.city.label}}
                             </mat-panel-title>
                             <mat-panel-description>
-                              <avatar-chip *ngIf="asso.assignedTo && asso.id" [employee]="asso.assignedTo"
-                                (onChangeAssigne)="updateAssignedToForAffaire($event,asso)">
-                              </avatar-chip>
                               <mat-icon color="accent" matTooltip="Voir/éditer l'affaire"
                                 (click)="displayAffaire($event, asso.affaire);$event.stopPropagation();"
                                 (auxclick)="displayAffaire($event, asso.affaire);$event.stopPropagation();"
@@ -161,12 +158,6 @@
                             </mat-panel-description>
                           </mat-expansion-panel-header>
                           <add-affaire [affaire]="asso.affaire" [editMode]="false"></add-affaire>
-                          <div *ngIf="asso && asso.id && instanceOfCustomerOrder">
-                            <autocomplete-employee [(model)]="asso.assignedTo" [form]="quotationForm"
-                              propertyName="assignedTo" [isMandatory]="true" [isDisabled]="false"
-                              label="Affaire assignée à" (onOptionSelected)="updateAssignedToForAffaire($event,asso)">
-                            </autocomplete-employee>
-                          </div>
                         </mat-expansion-panel>
                       </mat-accordion>
                     </div>
@@ -209,7 +200,7 @@
                               </mat-panel-title>
                               <span class="status-text"
                                 *ngIf="instanceOfCustomerOrderFn(quotation) && getActiveWorkflowElementsForProvision(provision)">{{getActiveWorkflowElementsForProvision(provision).label}}</span>
-                              <avatar-chip *ngIf="asso.assignedTo" [employee]="provision.assignedTo"
+                              <avatar-chip [employee]="provision.assignedTo"
                                 (onChangeAssigne)="updateAssignedToForProvision($event, provision)">
                               </avatar-chip>
                               <ng-template></ng-template>
