fix bookmark and readingFolder

--- a/client-myjss/src/app/modules/my-account/components/reading-folders/reading-folders.component.html
+++ b/client-myjss/src/app/modules/my-account/components/reading-folders/reading-folders.component.html
@@ -21,7 +21,7 @@
             (click)=" openDeletionModal(folder); $event.stopPropagation();">
             <i class="ai-cross"></i>
           </button>
-        </div>
+        </div>²
       </div>
     </div>
   </div>
